--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "electron-vue-admin",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "author": "Pan <panfree23@gmail.com>",
   "description": "An electron-vue project",
   "license": "MIT",
   "main": "./dist/electron/main.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/Guanrui1/electron-vue-admin-master.git"
+  },
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
